--- a/back/package.json
+++ b/back/package.json
@@ -23,7 +23,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:verbose": "jest --verbose"
+    "test:verbose": "jest --verbose",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix"
   },
   "engines": {
     "node": ">=20.x"
@@ -43,6 +45,7 @@
     "jest-environment-node": "^30.0.2",
     "nodemon": "^3.1.9",
     "supertest": "^7.1.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
