--- a/back/package.json
+++ b/back/package.json
@@ -37,7 +37,11 @@
     "@jest/globals": "^30.0.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.7",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "babel-jest": "^30.0.2",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
