--- a/front/package.json
+++ b/front/package.json
@@ -75,6 +75,8 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.3.5",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
     "typescript": "^5"
