--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,12 @@ jobs:
         script: |
           set -e
           cd /opt/app-booking
+          echo "🧹 Limpando código local..."
+          git reset --hard
+          git clean -fd
+          echo "🔄 Atualizando código com git pull..."
           git pull origin main
+          echo "🛠️ Recriando containers..."
           docker-compose down
           docker-compose build
           docker-compose up -d --remove-orphans
