--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Backend API
   api:
@@ -16,10 +14,10 @@ services:
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
       - JWT_SECRET=${JWT_SECRET}
     env_file:
-      - .env.prod
+      - ./back/.env.prod
     volumes:
       - ./back:/app
-      - /app/node_modules
+      # - /app/node_modules
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
@@ -41,11 +39,11 @@ services:
       - NEXT_PUBLIC_SUPABASE_URL=${SUPABASE_URL}
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
     env_file:
-      - .env.prod
+      - ./front/.env.prod
     volumes:
       - ./front:/app
-      - /app/node_modules
-      - /app/.next
+      # - /app/node_modules
+      # - /app/.next
     restart: unless-stopped
     depends_on:
       api:
