--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,8 +36,7 @@ services:
     environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_API_URL=http://api:3001
-      - NEXT_PUBLIC_SUPABASE_URL=${SUPABASE_URL}
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+      - API_URL=http://api:3001
     env_file:
       - ./front/.env.prod
     volumes:
