--- a/back/package.json
+++ b/back/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "main": "server.js",
-  "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "@types/supertest": "^6.0.3",
@@ -14,13 +13,14 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemailer": "^6.10.0",
+    "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.4"
   },
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "tsx watch server.ts",
-    "build": "tsc",
     "test": "jest",
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc && tsc-alias",
+    "start": "node dist/server.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:verbose": "jest --verbose",
@@ -51,6 +51,7 @@
     "supertest": "^7.1.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
