--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -53,4 +53,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3000 || exit 1
 
 # Comando para iniciar a aplicação
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
