--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,6 +1,21 @@
-# Dockerfile (frontend)
+# Etapa base
+FROM node:20-alpine AS base
 
-# ... build steps iguais até aqui ...
+RUN apk add --no-cache libc6-compat curl
+WORKDIR /app
+
+# Etapa de dependências
+FROM base AS deps
+COPY package*.json ./
+RUN npm ci
+
+# Etapa de build da aplicação
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+ENV NEXT_TELEMETRY_DISABLED 1
+RUN npm run build
 
 # Etapa final de produção
 FROM base AS runner
@@ -14,7 +29,6 @@ ENV HOSTNAME "0.0.0.0"
 RUN addgroup --system --gid 1001 nodejs \
  && adduser --system --uid 1001 nextjs
 
-# Copiar arquivos necessários
 COPY --from=builder /app/public ./public
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
