--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,15 +1,14 @@
 # Etapa base
 FROM node:20-alpine AS base
-
-RUN apk add --no-cache libc6-compat curl
 WORKDIR /app
+RUN apk add --no-cache libc6-compat
 
 # Etapa de dependências
 FROM base AS deps
 COPY package*.json ./
 RUN npm ci
 
-# Etapa de build da aplicação
+# Etapa de build
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
@@ -17,26 +16,37 @@ COPY . .
 ENV NEXT_TELEMETRY_DISABLED 1
 RUN npm run build
 
-# Etapa final de produção
+# Etapa final
 FROM base AS runner
 WORKDIR /app
 
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
-ENV PORT 3000
-ENV HOSTNAME "0.0.0.0"
+# Variáveis de ambiente
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV PORT=3000
+ENV HOSTNAME=0.0.0.0
 
-RUN addgroup --system --gid 1001 nodejs \
- && adduser --system --uid 1001 nextjs
-
+# Copiar arquivos do projeto e dependências
+COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/next.config.mjs ./
+COPY --from=builder /app/node_modules ./node_modules
 
+# Copiar tudo mais (ex: pages, app, styles, etc)
+COPY --from=builder /app/ ./
+
+
+# Criar usuário seguro
+RUN addgroup -S nodejs && adduser -S nextjs -G nodejs
 USER nextjs
+
+# Expor porta
 EXPOSE 3000
 
+# Healthcheck
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3000 || exit 1
 
-CMD ["node", "index.js"]
+# Iniciar app Next.js
+CMD ["npm", "start"]
