--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -14,8 +14,6 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 ENV NEXT_TELEMETRY_DISABLED=1
-
-# ADICIONE esse comando para forçar falha se build der erro
 RUN npm run build || (echo "❌ BUILD FALHOU" && exit 1)
 
 # Etapa final
@@ -28,21 +26,8 @@ ENV NEXT_TELEMETRY_DISABLED=1
 ENV PORT=3000
 ENV HOSTNAME=0.0.0.0
 
-# Copiar arquivos necessários
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/next.config.mjs ./
-COPY --from=builder /app/node_modules ./node_modules
-
-# Copiar app, pages, etc (evite sobrescrever .next)
-COPY --from=builder /app/app ./app
-COPY --from=builder /app/components ./components
-COPY --from=builder /app/styles ./styles
-COPY --from=builder /app/hooks ./hooks
-COPY --from=builder /app/lib ./lib
-COPY --from=builder /app/services ./services
-COPY --from=builder /app/types ./types
+# Copia tudo do build (inclusive .next, node_modules, app/, components/, etc.)
+COPY --from=builder /app ./
 
 # Expor porta
 EXPOSE 3000
