--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "agenda-backend",
-  "version": "1.0.1",
+  "name": "app-booking-backend",
+  "version": "2.0.0",
   "private": true,
   "main": "server.ts",
   "dependencies": {
@@ -18,14 +18,14 @@
   },
   "scripts": {
     "test": "jest",
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch server.ts",
     "build": "tsc && tsc-alias",
     "start": "node dist/server.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:verbose": "jest --verbose",
-    "lint": "eslint . --ext .ts,.js",
-    "lint:fix": "eslint . --ext .ts,.js --fix"
+    "lint": "eslint modules/ --ext .ts,.js",
+    "lint:fix": "eslint modules/ --ext .ts,.js --fix"
   },
   "engines": {
     "node": ">=18.x"
