--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "server.ts",
   "dependencies": {
+    "@scalar/express-api-reference": "^0.8.16",
     "@supabase/supabase-js": "^2.48.1",
     "@types/supertest": "^6.0.3",
     "bcrypt": "^5.1.1",
@@ -13,6 +14,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemailer": "^6.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.4"
   },
@@ -40,6 +43,8 @@
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.7",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "babel-jest": "^30.0.2",
