--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -23,7 +23,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true, 
+    "incremental": true,
+    "types": ["jest", "@types/jest"],
     "plugins": [
       {
         "name": "next"
