--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -16,7 +16,8 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noImplicitAny": false
   },
   "include": ["modules/**/*", "config/**/*", "utils/**/*", "server.ts"],
   "exclude": ["node_modules", "dist", "build", "coverage"]
