--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -17,6 +17,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "strictNullChecks": false,
     "noImplicitAny": false
   },
   "include": ["modules/**/*", "config/**/*", "utils/**/*", "server.ts"],
