--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "caniuse-lite": "^1.0.30001741",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
