--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,34 +18,34 @@ jobs:
         node-version: [18.x, 20.x]
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
     
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: back/package-lock.json
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: back/package-lock.json
     
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
     
-    - name: Run ESLint
-      run: npm run lint
+      - name: Run ESLint
+        run: npm run lint
     
-    - name: Run tests with coverage
-      run: npm run test:coverage
+      - name: Run tests with coverage
+        run: npm run test:coverage
     
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./back/coverage/lcov.info
-        flags: backend
-        name: backend-coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./back/coverage/lcov.info
+          flags: backend
+          name: backend-coverage
     
-    - name: Type check
-      run: npx tsc --noEmit
+      - name: Type check
+        run: npx tsc --noEmit
 
   frontend-ci:
     runs-on: ubuntu-latest
@@ -58,48 +58,71 @@ jobs:
         node-version: [18.x, 20.x]
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
     
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: front/package-lock.json
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: front/package-lock.json
     
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
     
-    - name: Run ESLint
-      run: npm run lint
+      - name: Run ESLint
+        run: npm run lint
     
-    - name: Type check
-      run: npx tsc --noEmit
+      - name: Type check
+        run: npx tsc --noEmit
     
-    - name: Build application
-      run: npm run build
+      - name: Build application
+        env:
+          NEXT_PUBLIC_API_URL: http://localhost:8080 # 👈 backend local para build
+        run: npm run build
     
-    - name: Run tests (if available)
-      run: npm test --if-present
-      continue-on-error: true
+      - name: Run tests (if available)
+        run: npm test --if-present
+        continue-on-error: true
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: [backend-ci, frontend-ci]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build Docker image
+        run: |
+          docker build -t myapp:ci -f Dockerfile.coolify .
+      
+      - name: Run container for smoke test
+        run: |
+          docker run -d -p 3000:3000 --name myapp myapp:ci
+          sleep 20
+          curl -f http://localhost:3000 || (docker logs myapp && exit 1)
+          docker stop myapp
 
   security-scan:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
     
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'fs'
-        scan-ref: '.'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
     
-    - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v2
-      if: always()
-      with:
-        sarif_file: 'trivy-results.sarif'
+      - name: Upload Trivy scan results
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
