--- a/nginx.conf
+++ b/nginx.conf
@@ -4,15 +4,15 @@ events {
 
 http {
     upstream backend {
-        server localhost:3001;
+        server api:3001;
     }
 
     upstream frontend {
-        server localhost:3000;
+        server frontend:3000;
     }
 
     server {
-        listen 3000;
+        listen 80; 
         server_name _;
 
         # Frontend
