--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,7 @@ events {
 }
 
 http {
+    # Upstreams usando os nomes dos serviços Docker Compose
     upstream backend {
         server api:3001;
     }
@@ -12,12 +13,12 @@ http {
     }
 
     server {
-        listen 80; 
+        listen 80;
         server_name _;
 
-        # Frontend
-        location / {
-            proxy_pass http://frontend;
+        # Health check antes de qualquer outra rota
+        location /health {
+            proxy_pass http://backend/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,18 +26,25 @@ http {
         }
 
         # API
-        location /api {
-            proxy_pass http://backend;
+        location /api/ {
+            proxy_pass http://backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Health check
-        location /health {
-            proxy_pass http://backend/health;
+        # Frontend (todas as outras rotas)
+        location / {
+            proxy_pass http://frontend;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Para Next.js lidar com rotas "SPA"
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
         }
     }
 }
