Refatora configuração do Nginx, ajustando a verificação de saúde e melhorando a definição das rotas da API e do frontend.

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,6 @@ events {
 }
 
 http {
-    # Upstreams usando os nomes dos serviços Docker Compose
     upstream backend {
         server api:3001;
     }
@@ -16,8 +15,8 @@ http {
         listen 80;
         server_name _;
 
-        # Health check antes de qualquer outra rota
-        location /health {
+        # Health check — colocar primeiro
+        location = /health {
             proxy_pass http://backend/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -25,7 +24,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # API
+        # API — todas as rotas /api
         location /api/ {
             proxy_pass http://backend/;
             proxy_set_header Host $host;
@@ -34,17 +33,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Frontend (todas as outras rotas)
+        # Frontend — todas as outras rotas
         location / {
             proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Para Next.js lidar com rotas "SPA"
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
         }
     }
 }
