--- a/Dockerfile.coolify
+++ b/Dockerfile.coolify
@@ -58,7 +58,7 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3001/health || exit 1
 
 # CMD backend
-CMD ["node", "dist/main.js"]
+CMD ["node", "dist/server.js"]
 
 # ==========================
 # STAGE 4: Frontend Produção
