--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,24 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Auth routes — rotas de autenticação diretas
+        location /auth/ {
+            proxy_pass http://backend/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Other API routes — outras rotas da API
+        location ~ ^/(room|booking|user|members|scale|analytics|swagger|docs|openapi\.json)/ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Frontend — todas as outras rotas
         location / {
             proxy_pass http://frontend;
