--- a/nginx.conf
+++ b/nginx.conf
@@ -4,11 +4,11 @@ events {
 
 http {
     upstream backend {
-        server api:3001;
+        server api:3001 max_fails=3 fail_timeout=30s;
     }
 
     upstream frontend {
-        server frontend:3000;
+        server frontend:3000 max_fails=3 fail_timeout=30s;
     }
 
     server {
@@ -22,6 +22,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 5s;
+            proxy_read_timeout 5s;
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
         }
 
         # API — todas as rotas /api
@@ -40,6 +44,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 5s;
+            proxy_read_timeout 5s;
         }
 
         # Other API routes — outras rotas da API
@@ -49,6 +56,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 5s;
+            proxy_read_timeout 5s;
         }
 
         # Frontend — todas as outras rotas
