--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,7 +56,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-https://api.espacovidanova.com.br}
+      - NEXT_PUBLIC_API_URL=http://api:3001
     restart: unless-stopped
     depends_on:
       api:
@@ -78,11 +78,13 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx-robust.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
     depends_on:
-      - frontend
-      - api
+      api:
+        condition: service_healthy
+      frontend:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - app-network
